<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros</name>
  <version>1.0.1</version>
  <description>The yolov5_ros package</description>

  <maintainer email="qq44642754@163.com">Zhitao Zheng</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
