<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros_msgs</name>
  <version>1.0.0</version>
  <description>The yolov5_ros_msgs package</description>

  <maintainer email="qq44642754@163.com">Zhitao Zheng</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
